Moved all pages to the pages directory for organization. Added M-Pesa prototype. Added login and register pages and logic.

--- a/pages/category_product_list.html
+++ b/pages/category_product_list.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'components/layout.html' %}
 {% load static %}
 {% block content %}
 <main class="container my-4">
