--- a/pages/index.html
+++ b/pages/index.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'components/layout.html' %}
 {% load static %}
 {% block content %}
 <!-- Home Slider -->
@@ -56,7 +56,7 @@
 			  	<button class="btn btn-sm btn-primary add-to-cart" data-index="{{product.id}}"><i class="fa fa-shopping-cart"></i></button>
 
 			  	<button class="btn btn-sm btn-danger add-wishlist" data-product="{{product.id}}"><i class="fa fa-heart"></i></button>
-          
+
 			  	<span class="float-right">
 			  		4.5/5
 			  		<i class="fa fa-star text-warning"></i>
