--- a/pages/register.html
+++ b/pages/register.html
@@ -31,9 +31,9 @@
                         <div class="form-group">
                             <label for="gender">Gender</label>
                             <select name="gender" class="form-control">
-                                <option value="0">Male</option>
-                                <option value="1">Female</option>
-                                <option value="2">Other</option>
+                                {% for gender in genders %}
+                                <option value="{{ gender.id }}">{{ gender }}</option>
+                                {% endfor %}
                             </select>
                         </div>
                         <div class="form-group">
