Removed payment processing variable number. Added profile edit page. Separated navbar and footer from the main layout.

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -40,8 +40,10 @@
             </p>
             <h5>Contact Information</h5>
             <p>
-                Email: <a href="mailto:support@iconicaquarech.com">support@iconicaquarech.com</a> <br>
-                Phone: <a href="tel:+254799642694">+254 799 642 694</a>
+                <i class="fa fa-light fa-envelope"></i>
+                <a href="mailto:support@iconicaquarech.com">support@iconicaquarech.com</a> <br>
+                <i class="fa fa-light fa-phone"></i>
+                <a href="tel:+254799642694">+254 799 642 694</a>
             </p>
         </div>
     </div>
@@ -52,22 +54,21 @@
             <p>Stay updated with our latest news and updates by following us on social media.</p>
             <ul class="list-inline">
                 <li class="list-inline-item">
-                    <a href="https://www.facebook.com/IconicAquaRech" target="_blank"><i class="fa-brands fa-facebook"> Facebook</i></a>
+                    <a href="https://www.x.com/IconicAquaRech" target="_blank">
+                        <i class="fa-brands fa-x-twitter fa-2xl"></i>
+                    </a>
                 </li>
                 <li class="list-inline-item">
-                    <a href="https://www.x.com/IconicAquaRech" target="_blank"><i class="fa-brands fa-x-twitter"> X</i></a>
+                    <a href="https://www.facebook.com/IconicAquaRech" target="_blank">
+                        <i class="fa-brands fa-facebook fa-2xl"></i>
+                    </a>
                 </li>
                 <li class="list-inline-item">
-                    <a href="http://www.instagram.com/IconicAquaRech" target="_blank"><i class="fa-brands fa-instagram"> Instagram</i></a>
+                    <a href="http://www.instagram.com/IconicAquaRech" target="_blank">
+                        <i class="fa-brands fa-instagram fa-2xl"></i>
+                    </a>
                 </li>
             </ul>
-        </div>
-        <div class="col-md-6">
-            <img
-                src="{% static 'web-assets/social-media.jpg' %}"
-                class="img-fluid"
-                alt="Social Media Icons"
-            />
         </div>
     </div>
 </main>
