--- a/pages/profile.html
+++ b/pages/profile.html
@@ -2,4 +2,78 @@
 {% load static %}
 {% block content %}
 
+<main class="container my-4">
+    <h3 class="my-4 border-bottom pb-1">User Profile</h3>
+    <div class="row">
+        <div class="col-md-6">
+            <h5>Personal Information</h5>
+            <p>
+                <strong>First Name:</strong> {{ user.first_name }}
+            </p>
+            <p>
+                <strong>Last Name:</strong> {{ user.last_name }}
+            </p>
+            <p>
+                <strong>Email:</strong> {{ user.email }}
+            </p>
+            <p>
+                <strong>Phone:</strong> {{ user.phone }}
+                <i id="edit-phone" class="fa-solid fa-pen-to-square" style="color: #2310FF; cursor: pointer;"></i>
+
+                {% comment %} Javascript to open a modal dialog to update the phone {% endcomment %}
+                <script>
+                    document.getElementById('edit-phone').addEventListener('click', function() {
+                        $('.modal').modal('show');
+                    });
+                </script>
+            </p>
+
+            <div class="modal" tabindex="-1" role="dialog">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Update phone number</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <form method="POST" action="{% url 'update-profile' %}">
+                            {% csrf_token %}
+                            <div class="form-group">
+                                <label for="phone">Phone</label>
+                                <input type="text" name="phone" class="form-control" id="phone" required>
+                            </div>
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <button type="submit" class="btn btn-primary">Update Phone</button>
+                        </form>
+                    </div>
+                    {% comment %} <div class="modal-footer">
+                        <button type="button" class="btn btn-primary">Save changes</button>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div> {% endcomment %}
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <h5>Password Change</h5>
+            <form method="POST" action="{% url 'change-password' %}">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="current_password">Current Password</label>
+                    <input type="password" name="current_password" class="form-control" id="current_password" required>
+                    </div>
+                <div class="form-group">
+                    <label for="new_password">New Password</label>
+                    <input type="password" name="new_password" class="form-control" id="new_password" required>
+                </div>
+                <div class="form-group">
+                    <label for="confirm_password">Confirm Password</label>
+                    <input type="password" name="confirm_password" class="form-control" id="confirm_password" required>
+                </div>
+                <button type="submit" class="btn btn-primary">Change Password</button>
+            </form>
+        </div>
+    </div>
 {% endblock %}
